<resources>
    <string name="app_name">AppTurismo</string>
    <string name="main_menu_activity">Menú de rutas</string>
    <string name="desc_imagen_cultura">Botón, lista las distintas rutas de cultura disponibles</string>
    <string name="desc_imagen_ocio">Botón, lista las distintas rutas de ocio disponibles</string>
    <string name="desc_imagen_gastronomia">Botón, lista las distintas rutas gastronómicas disponibles</string>
    <string name="titulo_elegir_categoria">Seleccione el tipo de ruta</string>
    <string name="titulo_lista_categoria">Rutas de </string>
    <string name="cadena_prueba_descripcion">De este edificio neoclásico destaca su fachada de ladrillo en la que alterna la piedra de las esquinas con la que enmarca ventanas y balcones. En ella sobresalen los frontones que culminan en los balcones del cuerpo superior.\nLa portada es monumental, aunque la estrecha calle Puentezuelas no permite disfrutarla desde mayor distancia. Destaca en ella el uso de las cuatro columnas dóricas y exentas que dan nombre al Palacio.\nEl balcón superior también presenta cuatro columnas jónicas (más bien semi-columnas adosadas), que rematan en un frontón y un amplio ático que sustenta el escudo nobiliario de los Condes de Luque.\nEn la lápida de la fachada se puede leer una inscripción en latín, que aunque está muy deteriorada, en ella se conmemora el año de su inauguración como institución académica.\nEl conjunto se vincula a los modelos derivados del edificio de la Real Academia de Bellas Artes de San Fernando de Madrid, proyectado por Juan de Villanueva.\nLa puerta principal del edificio está conformada por dos hojas realizadas en madera de pino y barnizadas imitando caoba.\nCada hoja tiene un cerrojo de hierro fundido con un tirador de barra, bisagras cónicas y una cerradura original inutilizada. Se trata de la puerta de entrada al Palacio de los Condes de Luque, de cronología encuadrable en el primer tercio del siglo XIX.</string>
    <string name="descripcion_placeholder">aqui va la descripción, primo</string>
    <string name="coste_estimado">Coste estimado:</string>
    <string name="desc_imagen_coste">Imagen que representa el coste medio de la ruta</string>
    <string name="desc_imagen_acceso">Imagen que representa el nivel de acceso medio de la ruta</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_maps">Camino a</string>
    <string name="funcionalidad_admin">Admin</string>
    <string name="titulo_gestion_rutas">Gestión de rutas</string>
    <string name="button_aniadir_ruta">Añadir ruta</string>
    <string name="button_aniadir_punto_interes">Añadir punto de interes</string>
    <string name="info_nombre_pi">Introduzca el nombre:</string>
    <string name="ruta_asociada">Ruta asociada</string>
    <string name="ruta_no_seleccionada">No asociar a ninguna ruta</string>
    <string name="imagen_puntos_ruta">Imagen de la ruta</string>

    <string name="titulo_seleccion_ruta">Rutas de %1$s</string>
    <string name="cultura">Cultura</string>
    <string name="ocio">Ocio</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="modo_de_usuario">Modo de Usuario</string>
    <string name="modo_de_administrador">Modo de Administrador</string>
    <string name="logo_de_appturismo_ver_c_editos">Logo de AppTurismo (ver cŕeditos)</string>
    <string name="tutorial_ruta">Pulse sobre un punto de interés para obtener información adiccional.
        Puede pulsar el botón de la esquina inferior derecha para iniciar la ruta</string>
    <string name="info_video">Vídeo (subtítulos y signos)</string>
    <string name="info_imagen">Imagen</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="app_about">Sobre AppTurismo</string>
    <string name="app_description">Esta aplicación, desarrollada por el grupo 11Steps, es un proyecto de clase para la asignatura de Dirección y Gestión de Proyectos del Grado en Ingeniería Informática de la Universidad de Granada</string>
    <string name="app_team">El Equipo</string>
    <string name="app_team_members">
        Alejandro Núñez Pérez\n
        Ángela Pozo Mateos\n
        Sergio López Ayala\n
        Jose Fidel Ariza Álvarez\n
        Diego Alfonso Candelaria Rodríguez\n
        David Infante Casas,\n
        Ruben Céspedes Heredia,\n
        Diego Alfonso Candelaria Rodríguez,\n
        José Ramón Guillén López
    </string>
</resources>
