<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ImageButton
        android:id="@+id/imageButtonIconoMonumentos"
        android:layout_width="185dp"
        android:layout_height="110dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc_imagen_cultura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="@drawable/cultura" />

    <TextView
        android:id="@+id/textViewMonumentos"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="#ff8608"
        android:padding="8dp"
        android:text="@string/cultura"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonIconoMonumentos"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/imageButtonIconoMonumentos"
        app:layout_constraintTop_toTopOf="@+id/imageButtonIconoMonumentos" />

    <ImageButton
        android:id="@+id/imageButtonIconoMiradores"
        android:layout_width="185dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc_imagen_ocio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.48000002"
        app:srcCompat="@drawable/ocio" />

    <TextView
        android:id="@+id/textViewMiradores"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="#4cb5ff"
        android:padding="8dp"
        android:text="@string/ocio"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonIconoMiradores"
        app:layout_constraintStart_toStartOf="@+id/imageButtonIconoMiradores"
        app:layout_constraintTop_toTopOf="@+id/imageButtonIconoMiradores" />

    <ImageButton
        android:id="@+id/imageButtonIconoRestaurantes"
        android:layout_width="185dp"
        android:layout_height="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/desc_imagen_gastronomia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/gastronomia" />

    <TextView
        android:id="@+id/textViewRestaurantes"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:background="#b2ff80"
        android:padding="8dp"
        android:text="@string/gastronomia"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonIconoRestaurantes"
        app:layout_constraintStart_toStartOf="@+id/imageButtonIconoRestaurantes"
        app:layout_constraintTop_toTopOf="@+id/imageButtonIconoRestaurantes" />


</android.support.constraint.ConstraintLayout>